[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/searchForFriends/friendRequestData.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 1, 0.27451, 0.372549 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.231373 )

[node name="Node2D" type="Panel"]
margin_right = 312.0
margin_bottom = 48.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 48.0

[node name="RequestName" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 56.0
text = "Name"

[node name="ScoreText" type="RichTextLabel" parent="."]
margin_left = 168.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 40.0
text = "Score:"

[node name="RequestScore" type="RichTextLabel" parent="."]
margin_left = 224.0
margin_top = 16.0
margin_right = 312.0
margin_bottom = 56.0
text = "1728"

[node name="Accept" type="Button" parent="."]
visible = false
margin_left = 64.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
text = "Accept"

[node name="Decline" type="Button" parent="."]
visible = false
margin_left = 200.0
margin_top = 48.0
margin_right = 272.0
margin_bottom = 68.0
text = "Decline"

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 29, 27 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 48.0
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="HTTPAccept" type="HTTPRequest" parent="."]

[node name="HTTPDecline" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Decline" to="." method="_on_Decline_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPAccept" to="." method="_on_HTTPAccept_request_completed"]
[connection signal="request_completed" from="HTTPDecline" to="." method="_on_HTTPDecline_request_completed"]
